# Supercondutor_HTc

./: README.md  config.py  prompt_claude_code.md  run_all.py  run_bdg.py  run_channels.py  run_correlation.py  run_null_models.py  run_qe_scaffold.py  run_rpa.py  run_sim.py  run_two_scale.py
.github/workflows/: tests.yml
outputs/: auto_auditoria.md  bdg_table.csv  channels_table.csv  correlation_table.csv  null_models_residuals.csv  rpa_table.csv  two_scale_table.csv
qe_runs/: README_SCAFFOLD.txt
qe_runs/P0kbar/: dos.in  nscf.in  projwfc.in  scf.in  submit_slurm.sh  vc-relax.in
qe_runs/P100kbar/: dos.in  nscf.in  projwfc.in  scf.in  submit_slurm.sh  vc-relax.in
qe_runs/P150kbar/: dos.in  nscf.in  projwfc.in  scf.in  submit_slurm.sh  (+1 more)
rar_gravity_pt0_package/: DELIVERY_NOTES.md  README.md  pyproject.toml
rar_gravity_pt0_package/data/: crespi_table4_targets.yaml
rar_gravity_pt0_package/output/logs/: pt0_go_no_go.txt
rar_gravity_pt0_package/output/reports/: pt0_error_table.md
rar_gravity_pt0_package/scripts/: _bootstrap.py  run_emulator_baseline.py  run_pt0_validate.py
rar_gravity_pt0_package/src/rar_gravity_pt0/: __init__.py  constants.py  eos_fermion_cutoff.py  mass_profile.py  orbit_s2.py  precession.py  rar_tov_solver.py  report.py  shooting.py  validate.py
rar_gravity_pt0_package/tests/: conftest.py  test_eos.py  test_integration.py  test_observables.py  test_tov.py
src/: __init__.py  channels.py  correlation.py  figures.py  lattice_bands.py  mediator_rpa.py  null_models.py  pairing_bdg.py  qe_scaffold.py  two_scale.py
tests/: test_sanity.py
(+24 files in other folders)
